# highlight-clipper

./: .gitignore  README.md  pyproject.toml
deadlock_highlight_clipper/: __init__.py  __main__.py  config.py  deadlock.py  twitch.py  utils.py  video_edit.py
deadlock_highlight_clipper/clients/: __init__.py  deadlock.py  twitch.py
deadlock_highlight_clipper/core/: __init__.py  app.py  match_processor.py
deadlock_highlight_clipper/events/: __init__.py  death_event.py  event.py  event_detector.py  kill_event.py  multikill_event.py  team_fight_event.py
deadlock_highlight_clipper/processors/: __init__.py
deadlock_highlight_clipper/utils/: __init__.py  data.py  time.py  video.py
